--- a/index.html
+++ b/index.html
@@ -292,12 +292,162 @@
                     "Panda 🐼", "Koala 🐨", "Penguin 🐧", "Dolphin 🐬", "Shark 🦈", "Eagle 🦅", "Owl 🦉",
                     "Peacock 🦚", "Crocodile 🐊", "Hippo 🦛", "Rhino 🦏", "Cheetah 🐆", "Wolf 🐺", "Bear 🐻"
                 ],
-                bollywood: [
-                    "Sholay", "Dilwale Dulhania Le Jayenge", "Lagaan", "3 Idiots", "Gangs of Wasseypur",
-                    "Mughal-e-Azam", "Mother India", "Dangal", "PK", "Barfi!", "Queen",
-                    "Andhadhun", "Zindagi Na Milegi Dobara", "Rang De Basanti", "Taare Zameen Par",
-                    "Bajrangi Bhaijaan", "My Name Is Khan", "Dil Chahta Hai", "Swades", "Chak De! India"
-                ]
+                 bollywood : [
+  "Sholay",
+  "Mughal-E-Azam",
+  "Mother India",
+  "Pakeezah",
+  "Deewaar",
+  "Don",
+  "Zanjeer",
+  "Amar Akbar Anthony",
+  "Bobby",
+  "Kabhi Kabhie",
+  "Silsila",
+  "Chandni",
+  "Dilwale Dulhania Le Jayenge",
+  "Kuch Kuch Hota Hai",
+  "Kabhi Khushi Kabhie Gham",
+  "Kal Ho Naa Ho",
+  "Kabir Singh",
+  "3 Idiots",
+  "PK",
+  "Dangal",
+  "Lagaan",
+  "Taare Zameen Par",
+  "Rang De Basanti",
+  "Swades",
+  "Jodhaa Akbar",
+  "Devdas",
+  "Hum Dil De Chuke Sanam",
+  "Goliyon Ki Raasleela Ram-Leela",
+  "Padmaavat",
+  "Bajirao Mastani",
+  "Gully Boy",
+  "Rock On!!",
+  "Dil Chahta Hai",
+  "Zindagi Na Milegi Dobara",
+  "Yeh Jawaani Hai Deewani",
+  "Barfi!",
+  "Tamasha",
+  "Wake Up Sid",
+  "Kapoor & Sons",
+  "Dear Zindagi",
+  "Raazi",
+  "Uri: The Surgical Strike",
+  "Chak De! India",
+  "Dil Se..",
+  "Guru",
+  "Black",
+  "Khamoshi: The Musical",
+  "Saathiya",
+  "Hum Tum",
+  "Fanaa",
+  "Veer-Zaara",
+  "Mohabbatein",
+  "Dil To Pagal Hai",
+  "Hum Aapke Hain Koun..!",
+  "Hum Saath-Saath Hain",
+  "Maine Pyar Kiya",
+  "Qayamat Se Qayamat Tak",
+  "Jo Jeeta Wohi Sikandar",
+  "Andaz Apna Apna",
+  "Hera Pheri",
+  "Phir Hera Pheri",
+  "Bhool Bhulaiyaa",
+  "Welcome",
+  "Singh Is Kinng",
+  "Housefull",
+  "Housefull 2",
+  "Chupke Chupke",
+  "Gol Maal (1979)",
+  "Chhoti Si Baat",
+  "Padosan",
+  "Bombay",
+  "Roja",
+  "Dil",
+  "Saajan",
+  "Beta",
+  "Karan Arjun",
+  "Kaho Naa... Pyaar Hai",
+  "Koi... Mil Gaya",
+  "Krrish",
+  "Agneepath",
+  "Don (2006)",
+  "Kabir Singh",
+  "Arjun Reddy (Hindi)",
+  "Baazigar",
+  "Darr",
+  "Anjaam",
+  "Karan Johar’s Student of the Year",
+  "Kalank",
+  "Rockstar",
+  "Highway",
+  "Lootera",
+  "Masaan",
+  "Udaan",
+  "Gangs of Wasseypur",
+  "Omkara",
+  "Maqbool",
+  "Haider",
+  "Satya",
+  "Company",
+  "Sarkar",
+  "Drishyam",
+  "Special 26",
+  "A Wednesday!",
+  "Baby",
+  "Airlift",
+  "Holiday",
+  "Kesari",
+  "Rustom",
+  "Toilet: Ek Prem Katha",
+  "Jolly LLB",
+  "Pink",
+  "Piku",
+  "Badhaai Ho",
+  "Shubh Mangal Zyada Saavdhan",
+  "Dream Girl",
+  "Andhadhun",
+  "Article 15",
+  "Bala",
+  "Vicky Donor",
+  "Stree",
+  "Bhediya",
+  "Mimi",
+  "Queen",
+  "Tanu Weds Manu",
+  "Tanu Weds Manu Returns",
+  "Manmarziyaan",
+  "Kabir Singh",
+  "Animal",
+  "Pathaan",
+  "Jawan",
+  "War",
+  "Bang Bang!",
+  "Ek Tha Tiger",
+  "Tiger Zinda Hai",
+  "Sultan",
+  "Bodyguard",
+  "Kick",
+  "Dabangg",
+  "Dabangg 2",
+  "Dabangg 3",
+  "Bajrangi Bhaijaan",
+  "Race",
+  "Race 2",
+  "Race 3",
+  "Dil Dhadakne Do",
+  "Don 2",
+  "Kabir Singh",
+  "Student of the Year 2",
+  "Ra.One",
+  "Fan",
+  "Zero",
+  "Chennai Express",
+  "Happy New Year",
+  "Om Shanti Om"
+];
             };
 
             // --- STATE VARIABLES ---
