Update bollywood, fixing comma

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+0<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -447,7 +447,7 @@
   "Chennai Express",
   "Happy New Year",
   "Om Shanti Om"
-];
+],
             };
 
             // --- STATE VARIABLES ---
